# clifford_3plus2

./: PROJECT_STATUS.md  README.md  THEORY_REVIEW.md  pyproject.toml
claude review/: FLAVOR_THEORY_AND_QSIM_ROADMAP.md  REVIEW_PLAN.md  SYNTHESIS.md  boundary_response_review.md  broken_triality_review.md  cp_review.md  exceptional_review.md  koide_review.md  lepton_review.md  obstruction_r10_review.md  sim_review.md  sme_review.md  spacetime_qca_review.md  strongcp_review.md  topology_review.md  triality_review.md
data/: qca_data.schema.json
docs/: PUBLICATION_PLAN.md  REORG_PLAN.md  bcc_qca_boundary_response_research_note_v_2.md  clifford_3plus2_to_d5_side_project_plan.md  depth_hierarchy_mechanism_recap.md  depth_hierarchy_mechanism_review.md  epsilon_provenance.md  falsifiers.md  flavor_a_track.html  handover_compliance.md  project_conventions.md  qca_3plus2_j_first_attack_plan.md  roadmap.md  theory.md  up_sector_clebsch_taylor_study.md
scripts/: bloch_path_a_search.py  bloch_path_a_stepwise.py  bloch_two_site.py  branching_check.py  defect_beta_search.py  discover_projectors.py  explore_rule_space.py  floquet_alpha.py  floquet_alpha_noncommuting_completion.py  floquet_alpha_noncommuting_j_gap.py  floquet_alpha_noncommuting_search.py  floquet_alpha_plus_search.py  floquet_alpha_search.py  floquet_alpha_second_layer_search.py  floquet_alpha_time_reversal_search.py  forced_j_check.py  gate_classification_check.py  gauge_equivalence_check.py  normalizer_check.py  perf_probe.py  qca_split_audit.py  qca_update_check.py  real_qca_branch_check.py  rule_to_verdict.py  spatial_1d_alpha_search.py  spatial_1d_unseeded_search.py  spinor16_check.py  structural_split_check.py
tests/: test_bloch_rule.py  test_branching.py  test_clifford_audit.py  test_commutant.py  test_defect_beta.py  test_floquet_alpha.py  test_gate_algebra.py  test_gate_classification.py  test_gate_word_search.py  test_gauge_equivalence.py  test_hypercharge.py  test_j_structure.py  test_no_locking.py  test_no_rank_one_addressability.py  test_normalizer.py  test_phase0_contract.py  test_projected_centralizer.py  test_qca_layers.py  test_qca_update_certificate.py  test_real_carrier.py  test_real_qca_branch.py  test_rule_space_exploration.py  test_rule_to_verdict.py  test_rule_verdict_solvers.py  test_scripts.py  test_spatial_1d.py  test_spinor16.py  test_two_site_bloch.py  (+1 more)
(+1277 files in other folders)
