[project]
name = "clifford-3plus2-d5"
version = "0.1.0"
description = "Audit the QCA 3+2 Clifford split to D5/Spin(10) bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
