[project]
name = "clifford-3plus2-d5"
version = "0.1.0"
description = "Workspace for QCA-derivation modules: obstruction_r10, lepton, spacetime_qca"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [
    "src/clifford_3plus2_d5/obstruction_r10/tests",
    "src/clifford_3plus2_d5/lepton/tests",
    "src/clifford_3plus2_d5/spacetime_qca/tests",
]
