[project]
name = "clifford-3plus2-d5"
version = "0.1.0"
description = "Workspace for QCA-derivation modules: obstruction_r10, lepton, spacetime_qca, sim"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10,<0.11",
    "jaxlib>=0.10,<0.11",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "optax>=0.1.7",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.10,<0.11",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = [
    "src/clifford_3plus2_d5/obstruction_r10/tests",
    "src/clifford_3plus2_d5/lepton/tests",
    "src/clifford_3plus2_d5/sim/tests",
    "src/clifford_3plus2_d5/spacetime_qca/tests",
]
markers = [
    "slow: exact symbolic or large numerical tests that are not part of the default fast development loop",
]
